Header links updated

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div>
   <ul>
     <li class="headerlinks"><a href="">header link one</a></li>
-    <li class="headerlinks"><a href="">header link one</a></li>
-    <li class="headerlinks"><a href="">header link one</a></li>
+    <li class="headerlinks"><a href="">header link two</a></li>
+    <li class="headerlinks"><a href="">header link three</a></li>
   </ul>
 </div>
 </header>
